--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-#codux boards
-src/_codux
-../.idea
+
+
+.idea
 # dependencies
 /node_modules
 /.pnp
