--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "redux-thunk": "^2.4.2",
     "sass": "^1.58.0",
     "sass-loader": "^13.2.2",
-    "typescript": "4.9.4",
     "use-context-selector": "^1.4.1"
   },
   "devDependencies": {
-    "@wixc3/react-board": "^2.1.3"
+    "@wixc3/react-board": "^2.1.3",
+    "typescript": "5.3.3"
   }
 }
